--- a/assets/css/_swal-custom.css
+++ b/assets/css/_swal-custom.css
@@ -14,5 +14,5 @@
 }
 .swal2-styled.swal2-cancel {
   color: #fff !important;
-  border: 1px solid rgba(255,255,255,0.08) !important;
+  border: 1px solid rgba(255, 255, 255, 0.08) !important;
 }
